# meetup-python-prom

./: 404.html  README.md  _redirects  package-lock.json  package.json  pyproject.toml  slides.md
.github/workflows/: deploy.yml
assets/: index-DrIGURIO.css  index-XsquZx5W.js  md-BDEGhPdy.js  md-BKXGNHVV.css  md-BP3WZg_e.js  md-BSoLkRU6.js  md-BeVjg2Ei.js  md-BrB0yD1V.js  md-CI1TdAdc.js  md-CPpnSIXP.js  md-DCkpH9Ts.js  md-Dp_Gyq0I.js  md-J24wFxjx.js  md-PHC86Qmc.js  md-bM44sLCv.js  md-i3ssn95L.js  md-o76BxBi8.js
assets/slidev/: 404-BvZfSiDD.js  DrawingControls-CC1n8ArO.js  DrawingControls.vue_vue_type_style_index_0_lang-CGOgMR6e.js  DrawingLayer-DLG29tov.js  NoteDisplay.vue_vue_type_style_index_0_lang-DRw8zgX6.js  SlideWrapper-BYwbCfds.js  context-c_-DiBVL.js  default-Dn_NFY0i.js  entry-D-g662TO.js  md-DFxTFmOl.js  md-DbSwHDsR.js  notes-BOdp-_n3.js  overview-B00bBmH7.js  play-BNqaAALb.js  presenter-CSgq6lPF.js  shortcuts-NcQEQIOW.js  title-renderer.md_vue_type_script_setup_true_lang-CF1E96vr.js
demo/demo-textfile-collector/: Dockerfile  main.py  pyproject.toml  run.sh  sample.xml  store.prom
demo/stack-prometheus-grafana/: alert.rules  alertmanager.yml  dashboard_store.json  dashboard_store_all.json  docker-compose.yml  node.yml  prometheus.yml
